# SF64RCA

./: .gitmodules  CMakeLists.txt  file_to_c  us.rev1.toml
.github/workflows/: android.yml
Android/: local.properties
android/: CMakeLists.txt  build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: InitializeEngine.cpp  SDL_main.cpp  main_android_wrapper.cpp
android/app/src/main/java/com/canc/starfox64/: MainActivity.kt  Starfox64Activity.kt
patches/: shooting_star.c
src/platform/android/: AndroidRT64Wrapper.cpp  AndroidRT64Wrapper.h  RendererSelector.cpp  RendererSelector.h  RmlFileInterface_Android.h  RmlSystemInterface_Android.h  rml_android.cpp
